# ai-chatbot-js

./: .env.example  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
providers/: providers.py  rag_agent.py  together.py
scripts/: health_check.py  ingest.py  source_sync.py  terminal.py
utils/: chroma.py  docstore.py  index.py  slack_notificator.py
